<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1"
    tools:context=".DetailLapanganActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:id="@+id/img_item_lapangan"
                tools:src="@android:color/white"/>
        </FrameLayout>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="25sp"
            android:textColor="@android:color/black"
            tools:text="@string/lap_name"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tv_harga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_light"
            tools:text="@string/harga"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/tv_kategori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:lineSpacingMultiplier="1"
            android:textColor="@android:color/black"
            tools:text="Kategori"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/tv_deskrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:lineSpacingMultiplier="1"
            android:textColor="@android:color/black"
            tools:text="@string/deskripsi"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:id="@+id/date"
            android:weightSum="2"
            android:layout_marginTop="15dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="15dp">

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:drawablePadding="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:letterSpacing="0.1"
                android:background="@color/colorAccent"
                android:text="EDIT"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:drawablePadding="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:letterSpacing="0.1"
                android:background="@color/colorAccent"
                android:text="Hapus"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/pesan"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:text="@string/pesan_sekarang"/>
    </LinearLayout>

</ScrollView>