<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1"
    tools:context=".AddNotaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_brand"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"

            app:srcCompat="@drawable/logo" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:textSize="20dp"
                    android:text="@string/tanggal"/>

                <EditText
                    android:id="@+id/et_tanggal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:textColor="@android:color/black"
                    android:inputType="textAutoComplete"
                    android:enabled="false"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:textSize="20dp"
                    android:text="Toko"/>

                <EditText
                    android:id="@+id/et_toko"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:textColor="@android:color/black"
                    android:inputType="textAutoComplete"
                    android:enabled="false"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:textSize="20dp"
                    android:text="@string/penyewa"/>

                <EditText
                    android:id="@+id/et_penyewa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:textColor="@android:color/black"
                    android:inputType="textAutoComplete"/>
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:id="@+id/date"
            android:weightSum="2"
            android:layout_marginTop="15dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/btn_batal"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:drawablePadding="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:letterSpacing="0.1"
                android:background="@color/colorAccent"
                android:text="@string/batal"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn_simpan"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:drawablePadding="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:letterSpacing="0.1"
                android:background="@color/colorAccent"
                android:text="@string/simpan"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>


</ScrollView>